--- a/EventBoardFrontEnd/src/main/java/ui/pages/adminHomepage.form
+++ b/EventBoardFrontEnd/src/main/java/ui/pages/adminHomepage.form
@@ -311,12 +311,10 @@
                 <Component class="javax.swing.JTable" name="jTable1">
                   <Properties>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                      <Table columnCount="5" rowCount="0">
-                        <Column editable="false" title="Association Name" type="java.lang.Object"/>
-                        <Column editable="false" title="Description" type="java.lang.Object"/>
-                        <Column editable="false" title="Contact Info" type="java.lang.Object"/>
-                        <Column editable="false" title="Email" type="java.lang.Object"/>
-                        <Column editable="true" title="Action" type="java.lang.Boolean"/>
+                      <Table columnCount="3" rowCount="0">
+                        <Column editable="false" title="Details" type="java.lang.Object"/>
+                        <Column editable="true" title="Approve" type="java.lang.Object"/>
+                        <Column editable="true" title="Deny" type="java.lang.Object"/>
                       </Table>
                     </Property>
                   </Properties>
