--- a/EventBoardFrontEnd/src/main/java/ui/pages/UserHomePage.form
+++ b/EventBoardFrontEnd/src/main/java/ui/pages/UserHomePage.form
@@ -377,17 +377,17 @@
 
               <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
               <SubComponents>
-                <Component class="javax.swing.JTable" name="homeFeedsTable1">
+                <Component class="javax.swing.JTable" name="pastFeedsTable">
                   <Properties>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-                      <Connection code="homeFeedsTable1.getModel()" type="code"/>
+                      <Connection code="pastFeedsTable.getModel()" type="code"/>
                     </Property>
                   </Properties>
                   <AuxValues>
                     <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new JTable (new EventsFeedTableModel(pastfeeds))"/>
                     <AuxValue name="JavaCodeGenerator_CreateCodePre" type="java.lang.String" value="String pastUrl = &quot;http://localhost:9002/events/?type=past&amp;user_id=&quot;+this.inputJSON.get(&quot;user_id&quot;);&#xa;RestAPIHook pastHook = new RestAPIHook();&#xa;JSONObject pastJSON = pastHook.invokeGetMethod(pastUrl);&#xa;Iterator&lt;String&gt; pastKeys = pastJSON.keys();&#xa;&#xa;List pastfeeds = new ArrayList();&#xa;while(pastKeys.hasNext()){&#xa;    String pastKey = pastKeys.next();&#xa;&#xa;    if(&quot;isSuccess&quot;.equals(pastKey)){&#xa;        continue;&#xa;    }&#xa;&#xa;    HashMap temp = new HashMap();&#xa;&#xa;    temp.put(&quot;event_id&quot;, pastKey);&#xa;    JSONObject val = pastJSON.getJSONObject(pastKey);&#xa;    Iterator&lt;String&gt; childKeys = val.keys();&#xa;    while(childKeys.hasNext()){&#xa;        String childKey = childKeys.next();&#xa;        temp.put(childKey, val.get(childKey));&#xa;    }&#xa;    temp.put(&quot;isRendered&quot;, false);&#xa;    temp.put(&quot;isFollow&quot;, false);&#xa;    temp.put(&quot;user_id&quot;, this.inputJSON.get(&quot;user_id&quot;).toString());&#xa;    System.out.println(&quot;Hi2&quot;);&#xa;    System.out.println(temp);&#xa;    System.out.println(&quot;Hi3&quot;);&#xa;    pastfeeds.add(new EventsFeed(temp));&#xa;}"/>
-                    <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="homeFeedsTable1.setCursor(new java.awt.Cursor(java.awt.Cursor.DEFAULT_CURSOR));&#xa;homeFeedsTable1.setFocusable(false);&#xa;homeFeedsTable1.setOpaque(false);&#xa;homeFeedsTable1.setRequestFocusEnabled(false);&#xa;homeFeedsTable1.setRowSelectionAllowed(false);&#xa;homeFeedsTable1.setSurrendersFocusOnKeystroke(true);&#xa;homeFeedsTable1.setUpdateSelectionOnSort(false);&#xa;homeFeedsTable1.setVerifyInputWhenFocusTarget(false);"/>
-                    <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="homeFeedsTable1.setDefaultRenderer(EventsFeed.class, new EventsFeedCell());&#xa;homeFeedsTable1.setDefaultEditor(EventsFeed.class, new EventsFeedCell());&#xa;homeFeedsTable1.setRowHeight(60);"/>
+                    <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="pastFeedsTable.setCursor(new java.awt.Cursor(java.awt.Cursor.DEFAULT_CURSOR));&#xa;pastFeedsTable.setFocusable(false);&#xa;pastFeedsTable.setOpaque(false);&#xa;pastFeedsTable.setRequestFocusEnabled(false);&#xa;pastFeedsTable.setRowSelectionAllowed(false);&#xa;pastFeedsTable.setSurrendersFocusOnKeystroke(true);&#xa;pastFeedsTable.setUpdateSelectionOnSort(false);&#xa;pastFeedsTable.setVerifyInputWhenFocusTarget(false);"/>
+                    <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="pastFeedsTable.setDefaultRenderer(EventsFeed.class, new EventsFeedCell());&#xa;pastFeedsTable.setDefaultEditor(EventsFeed.class, new EventsFeedCell());&#xa;pastFeedsTable.setRowHeight(60);"/>
                   </AuxValues>
                 </Component>
               </SubComponents>
